--- a/hoteis.html
+++ b/hoteis.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>BSB</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 </head>
 <body>
     <div class="menu">
@@ -23,7 +24,13 @@
     <article class="cartao-hoteis">
         <div class="cartao-hoteis-itens">
             <a href="#"><img src="royal.jpg" alt="" class="imagens-card" width="750px"></a><br>
-            <img class="teste" src="avaliacao.png" alt="" width="80px" height="80px">
+            <div class="estrelas">
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+            </div>
             <p class="texto-turistico"><span>Endereço:</span> SHTN Trecho 1 Conjunto 1B Bloco C - Asa Norte, Brasília - DF, 70800-200</p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3424-7000</span></p>
             <p class="texto-turistico"><span>Preço médio por diária:</span> <span class="precos">R$ 424,00</span></p>
@@ -35,7 +42,13 @@
     <article class="cartao-hoteis">
         <div class="cartao-hoteis-itens">
             <a href="#"><img src="vision.jpg" alt="" class="imagens-card" width="750px"></a><br>
-            <img class="teste" src="avaliacao.png" alt="" width="80px" height="80px">
+            <div class="estrelas">
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+            </div>
             <p class="texto-turistico"><span>Endereço:</span> Área Especial A, SHN Q. 1 Bloco F - Asa Norte, Brasília - DF, 70701-000</p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3022-3200</span></p>
             <p class="texto-turistico"><span>Preço médio por diária:</span> <span class="precos">R$ 522,00</span></p>
@@ -47,7 +60,13 @@
     <article class="cartao-hoteis">
         <div class="cartao-hoteis-itens">
             <a href="#"><img src="bittar.jpg" alt="" class="imagens-card" width="750px"></a><br>
-            <img class="teste" src="avaliacao.png" alt="" width="80px" height="80px">
+            <div class="estrelas">
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+            </div>
             <p class="texto-turistico"><span>Endereço:</span> Setor Hoteleiro Sul, Quadra 3 Bloco A Brasília - DF | CEP 70322-904</p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3704-2000</span></p>
             <p class="texto-turistico"><span>Preço médio por diária:</span> <span class="precos">R$ 370,00</span></p>
@@ -59,7 +78,13 @@
     <article class="cartao-hoteis">
         <div class="cartao-hoteis-itens">
             <a href="#"><img src="likeu.jpg" alt="" class="imagens-card" width="750px"></a><br>
-            <img class="teste" src="avaliacao.png" alt="" width="80px" height="80px">
+            <div class="estrelas">
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+            </div>
             <p class="texto-turistico"><span>Endereço:</span> Setor Hoteleiro Sul 4, Brasília - DF, 70322-908</p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3204-6162</span></p>
             <p class="texto-turistico"><span>Preço médio por diária:</span> <span class="precos">R$ 275,00</span></p>
@@ -71,7 +96,13 @@
     <article class="cartao-hoteis">
         <div class="cartao-hoteis-itens"> 
             <a href="#"><img src="nobile.jpg" alt="" class="imagens-card" width="750px"></a><br>
-            <img class="teste" src="avaliacao.png" alt="" width="80px" height="80px">
+            <div class="estrelas">
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+            </div>
             <p class="texto-turistico"><span>Endereço:</span> SHN Quadra 4 Lote B, SHN, Brasília - DF, 70704-000</p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3044-4001</span></p>
             <p class="texto-turistico"><span>Preço médio por diária:</span> <span class="precos">R$ 500,00</span></p>
@@ -84,7 +115,13 @@
     <article class="cartao-hoteis">
         <div class="cartao-hoteis-itens">
             <a href="#"><img src="quality.jpg" alt="" class="imagens-card" width="750px"></a><br>
-            <img class="teste" src="avaliacao.png" alt="" width="80px" height="80px">
+            <div class="estrelas">
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+            </div>
             <p class="texto-turistico"><span>Endereço:</span> St de Múltiplas Atividades Sul, Trecho 3 Conjunto 2 Bloco A - Asa Sul</p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3774-5600</span></p>
             <p class="texto-turistico"><span>Preço médio por diária:</span> <span class="precos">R$ 400,00</span></p>
@@ -96,7 +133,13 @@
     <article class="cartao-hoteis">
         <div class="cartao-hoteis-itens">
             <a href="#"><img src="bhotel.jpg" alt="" class="imagens-card" width="750px"></a><br>
-            <img class="teste" src="avaliacao.png" alt="" width="80px" height="80px">
+            <div class="estrelas">
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+            </div>
             <p class="texto-turistico"><span>Endereço:</span> SHN Q 5 BL J Lote L - Asa Norte, Brasília - DF, 70705-100</p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3962-2000</span></p>
             <p class="texto-turistico"><span>Preço médio por diária:</span> <span class="precos">R$ 550,00</span></p>
