--- a/bares.html
+++ b/bares.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>BSB</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 </head>
-<body>
+<body onresize="mudouTamanho()" >
     
     <div class="menu">
-        <ul class="menu-lista">
+        <span id="burguer" class="material-icons md-48" onclick="clickMenu()" >menu</span>
+        <ul class="menu-lista" id="itens">
             <li><a href="index.html" class="menu-item">Home</a></li>
             <li><a href="hoteis.html" class="menu-item">Hotéis</a></li>
             <li><a href="bares.html" class="menu-item">Bares</a></li>
@@ -144,5 +146,25 @@
             <p>copyright ©️ 2023</p>
         </div>
     </footer>
+
+    <script>
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 700) {
+                itens.style.display = 'flex'
+            } else {
+                itens.style.display = 'none' 
+            }
+        }
+
+        function clickMenu() {
+            if (itens.style.display == 'block'){
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
+    
 </body>
 </html>
