--- a/hoteis.html
+++ b/hoteis.html
@@ -8,9 +8,10 @@
     <title>BSB</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 </head>
-<body>
+<body onresize="mudouTamanho()" >
     <div class="menu">
-        <ul class="menu-lista">
+        <span id="burguer" class="material-icons md-48" onclick="clickMenu()" >menu</span>
+        <ul class="menu-lista" id="itens">
             <li><a href="index.html" class="menu-item">Home</a></li>
             <li><a href="hoteis.html" class="menu-item">Hotéis</a></li>
             <li><a href="bares.html" class="menu-item">Bares</a></li>
@@ -161,5 +162,24 @@
             <p>copyright ©️ 2023</p>
         </div>
     </footer>
+
+    <script>
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 700) {
+                itens.style.display = 'flex'
+            } else {
+                itens.style.display = 'none' 
+            }
+        }
+
+        function clickMenu() {
+            if (itens.style.display == 'block'){
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
