--- a/passeios.html
+++ b/passeios.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>BSB</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 </head>
-<body>
+<body onresize="mudouTamanho()" >
     <div class="menu">
-        <ul class="menu-lista">
+        <span id="burguer" class="material-icons md-48" onclick="clickMenu()" >menu</span>
+        <ul class="menu-lista" id="itens" >
             <li><a href="index.html" class="menu-item">Home</a></li>
             <li><a href="hoteis.html" class="menu-item">Hotéis</a></li>
             <li><a href="bares.html" class="menu-item">Bares</a></li>
@@ -94,7 +96,6 @@
             <a href="#"><img src="barco.jpg" alt="" class="imagens-card" width="750px" height="472px"></a><br>
             <p class="texto-turistico"><span>Horários:</span> diariamente a partir das 13hrs</p>
             <p class="texto-turistico"><span>Endereço:</span> pontão do lago sul</p>
-            <p class="texto-turistico"><span>Espaço aberto ao público</span></p>
             <br><br>
         </div>
     </article>
@@ -123,5 +124,25 @@
             <p>copyright ©️ 2023</p>
         </div>
     </footer>
+
+    <script>
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 700) {
+                itens.style.display = 'flex'
+            } else {
+                itens.style.display = 'none' 
+            }
+        }
+
+        function clickMenu() {
+            if (itens.style.display == 'block'){
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
+
 </body>
 </html>
