--- a/passeios.html
+++ b/passeios.html
@@ -110,6 +110,44 @@
         </div>
     </article>
 
+    <h2 class="legenda-hoteis">Jardim Botânico de Brasília</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="jardim-botanico.jpg" alt="" class="imagens-card" width="750px"></a><br>
+            <p class="texto-info">O Jardim Botânico de Brasília é um jardim botânico brasileiro, situado na região administrativa <br> de Jardim Botânico, no Distrito Federal, às margens da Rodovia DF 035.</p>
+            <p class="texto-turistico"><span>Horários:</span>  
+                quarta-feira	09:00–17:00 <br>
+                quinta-feira	09:00–17:00 <br>
+                sexta-feira	09:00–17:00 <br>
+                sábado	09:00–17:00 <br>
+                domingo	09:00–17:00 <br>
+                segunda-feira	Fechado <br>
+                terça-feira	09:00–17:00 </p>
+            <p class="texto-turistico"><span>Endereço:</span>  DF-035, s/nº - Jardim Botânico, Brasília - DF, 71680-001</p>
+            <p class="texto-turistico"><span>Valor do ingresso:</span> <span class="precos" >R$ 5,00</span> </p>
+            <br><br>
+        </div>
+    </article>
+
+    <h2 class="legenda-hoteis">CCBB Brasília</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="ccbb.jpg" alt="" class="imagens-card" width="750px"></a><br>
+            <p class="texto-info">Centro cultural, contendo galerias de arte contemporânea, cinema e café.</p>
+            <p class="texto-turistico"><span>Horários:</span>  
+                quarta-feira	09:00 – 21:00 <br>
+                quinta-feira	09:00 – 21:00 <br>
+                sexta-feira	09:00 – 21:00 <br>
+                sábado	09:00 – 21:00 <br>
+                domingo	09:00 – 21:00 <br>
+                segunda-feira	Fechado <br>
+                terça-feira	09:00 – 21:00 </p>
+            <p class="texto-turistico"><span>Endereço:</span>  DF-035, s/nº - Jardim Botânico, Brasília - DF, 71680-001</p>
+            <p class="texto-turistico"><span>Valor do ingresso:</span> <span class="precos" >R$ 5,00</span> </p>
+            <br><br>
+        </div>
+    </article>
+
     <footer class="footer">
 
         <div class="redes">
