cartões passeios finalizados

--- a/passeios.html
+++ b/passeios.html
@@ -116,13 +116,13 @@
             <a href="#"><img src="jardim-botanico.jpg" alt="" class="imagens-card" width="750px"></a><br>
             <p class="texto-info">O Jardim Botânico de Brasília é um jardim botânico brasileiro, situado na região administrativa <br> de Jardim Botânico, no Distrito Federal, às margens da Rodovia DF 035.</p>
             <p class="texto-turistico"><span>Horários:</span>  
-                quarta-feira	09:00–17:00 <br>
-                quinta-feira	09:00–17:00 <br>
-                sexta-feira	09:00–17:00 <br>
-                sábado	09:00–17:00 <br>
-                domingo	09:00–17:00 <br>
+                quarta-feira	09:00 – 17:00 <br>
+                quinta-feira	09:00 – 17:00 <br>
+                sexta-feira	09:00 – 17:00 <br>
+                sábado	09:00 – 17:00 <br>
+                domingo	09:00 – 17:00 <br>
                 segunda-feira	Fechado <br>
-                terça-feira	09:00–17:00 </p>
+                terça-feira	09:00 – 17:00 </p>
             <p class="texto-turistico"><span>Endereço:</span>  DF-035, s/nº - Jardim Botânico, Brasília - DF, 71680-001</p>
             <p class="texto-turistico"><span>Valor do ingresso:</span> <span class="precos" >R$ 5,00</span> </p>
             <br><br>
@@ -142,8 +142,33 @@
                 domingo	09:00 – 21:00 <br>
                 segunda-feira	Fechado <br>
                 terça-feira	09:00 – 21:00 </p>
-            <p class="texto-turistico"><span>Endereço:</span>  DF-035, s/nº - Jardim Botânico, Brasília - DF, 71680-001</p>
-            <p class="texto-turistico"><span>Valor do ingresso:</span> <span class="precos" >R$ 5,00</span> </p>
+            <p class="texto-turistico"><span>Endereço:</span> Asa sul Trecho 2 - Brasília, DF, 70200-002</p>
+            <p class="texto-turistico"><span>Espaço aberto ao público</span></p>
+            <br><br>
+        </div>
+    </article>
+
+    <h2 class="legenda-hoteis">Praça dos Cristais</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="praca-dos-cristais.jpg" alt="" class="imagens-card" width="750px"></a><br>
+            <p class="texto-info">A Praça Cívica, mais conhecida como Praça dos Cristais, é uma obra paisagística projetada <br> pelo artista plástico Roberto Burle Marx e seu assistente Haruyoshi Ono.</p>
+            <p class="texto-turistico"><span>Horários:</span>Aberto 24 horas</p>
+            <p class="texto-turistico"><span>Endereço:</span>  Praça Duque de Caxias, SMU - Brasília, DF</p>
+            <p class="texto-turistico"><span>Espaço aberto ao público</span></p>
+            <br><br>
+        </div>
+    </article>
+
+    <h2 class="legenda-hoteis">Cine Drive-In</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="cine-divein.jpg" alt="" class="imagens-card" width="750px"></a><br>
+            <p class="texto-info">O Cine Drive-in é um cinema drive-in localizado em Brasília, Brasil.</p>
+            <p class="texto-turistico"><span>Horários:</span>Aberto 24 horas</p>
+            <p class="texto-turistico"><span>Endereço:</span> SRPN Trecho 1 - Brasília, DF, 70297-400</p>
+            <p class="texto-turistico"><span>Inteira:</span> <span class="precos" >R$ 40,00</span> </p>
+            <p class="texto-turistico"><span>Meia:</span> <span class="precos" >R$ 20,00</span> </p>
             <br><br>
         </div>
     </article>
