cartão pontos turísticos finalizado

--- a/index.html
+++ b/index.html
@@ -166,6 +166,18 @@
         </div>
     </article>
 
+    <h2 class="legenda-hoteis">Santuário São João Bosco</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="santuario-dombosco.jpg" alt="" class="imagens-card" width="750px"></a><br>
+            <p class="texto-info">O Santuário Dom Bosco, também chamado pelo nome oficial, Santuário São João Bosco, é uma <br> igreja católica de Brasília, dedicada ao segundo padroeiro da cidade, São João Bosco,<br> o Dom Bosco, que teria profetizado a existência da capital brasileira durante um sonho. </p>
+            <p class="texto-turistico"><span>Arquiteto:</span> Carlos Alberto Naves</p>
+            <p class="texto-turistico"><span>Endereço:</span> Quadra 702 Sul Bloco B, SHCS, Brasília - DF</p>
+            <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3323-5562</span></p>
+            <br><br>
+        </div>
+    </article>
+
     <footer class="footer">
 
         <div class="redes">
