cartões hotéis finalizado

--- a/hoteis.html
+++ b/hoteis.html
@@ -66,7 +66,7 @@
                 <span class="material-icons">star</span>
                 <span class="material-icons">star</span>
                 <span class="material-icons">star</span>
-                <span class="material-icons">star</span>
+                <span class="material-icons">star_half</span>
             </div>
             <p class="texto-turistico"><span>Endereço:</span> Setor Hoteleiro Sul, Quadra 3 Bloco A Brasília - DF | CEP 70322-904</p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3704-2000</span></p>
@@ -84,7 +84,7 @@
                 <span class="material-icons">star</span>
                 <span class="material-icons">star</span>
                 <span class="material-icons">star</span>
-                <span class="material-icons">star</span>
+                <span class="material-icons">star_half</span>
             </div>
             <p class="texto-turistico"><span>Endereço:</span> Setor Hoteleiro Sul 4, Brasília - DF, 70322-908</p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3204-6162</span></p>
@@ -147,6 +147,97 @@
             <br><br>
         </div>
     </article>
+
+    <h2 class="legenda-hoteis">Mercure Brasilia Lider Hotel</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="mercure.jpg" alt="" class="imagens-card" width="750px"></a><br>
+            <div class="estrelas">
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+            </div>
+            <p class="texto-turistico"><span>Endereço:</span> SHN Q 5 Bloco I - Asa Norte, Brasília - DF, 70705-912</p>
+            <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3426-4000</span></p>
+            <p class="texto-turistico"><span>Preço médio por diária:</span> <span class="precos">R$ 260,00</span></p>
+            <br><br>
+        </div>
+    </article>
+
+    <h2 class="legenda-hoteis">Cullinan Hplus Premium</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="culinan.jpg" alt="" class="imagens-card" width="750px"></a><br>
+            <div class="estrelas">
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+            </div>
+            <p class="texto-turistico"><span>Endereço:</span>  SHN Q. 4 Bloco E - Asa Norte, Brasília - DF, 70297-400</p>
+            <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3426-5000</span></p>
+            <p class="texto-turistico"><span>Preço médio por diária:</span> <span class="precos">R$ 500,00</span></p>
+            <br><br>
+        </div>
+    </article>
+
+    <h2 class="legenda-hoteis">Brasília Palace Hotel</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="brasilia-palace-hotel.jpg" alt="" class="imagens-card" width="750px"></a><br>
+            <div class="estrelas">
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+            </div>
+            <p class="texto-turistico"><span>Endereço:</span>  SHTN Trecho 01 Conjunto 01, Setor de Hotéis e Turismo Norte - Asa Norte</p>
+            <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3306-9000</span></p>
+            <p class="texto-turistico"><span>Preço médio por diária:</span> <span class="precos">R$ 420,00</span></p>
+            <br><br>
+        </div>
+    </article>
+
+    <h2 class="legenda-hoteis">Grand Bittar</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="granbittar.jpg" alt="" class="imagens-card" width="750px"></a><br>
+            <div class="estrelas">
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star_half</span>
+            </div>
+            <p class="texto-turistico"><span>Endereço:</span>  SHS Q. 5 - Asa Sul, Brasília - DF, 70322-917</p>
+            <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3704-5000</span></p>
+            <p class="texto-turistico"><span>Preço médio por diária:</span> <span class="precos">R$ 360,00</span></p>
+            <br><br>
+        </div>
+    </article>
+
+    <h2 class="legenda-hoteis">Hotel Athos Bulcão Hplus Executive</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="athos-hotel.jpg" alt="" class="imagens-card" width="750px"></a><br>
+            <div class="estrelas">
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+                <span class="material-icons">star</span>
+            </div>
+            <p class="texto-turistico"><span>Endereço:</span>  SHN Q. 5 BL D - Asa Norte, Brasília - DF, 70705-000</p>
+            <p class="texto-turistico"><span>Telefone:</span> <span class="telefone">(61) 3241-3600</span></p>
+            <p class="texto-turistico"><span>Preço médio por diária:</span> <span class="precos">R$ 350,00</span></p>
+            <br><br>
+        </div>
+    </article>
+
 
     <footer class="footer">
 
