cartões bares finalizado

--- a/hoteis.html
+++ b/hoteis.html
@@ -16,7 +16,7 @@
             <li><a href="hoteis.html" class="menu-item">Hotéis</a></li>
             <li><a href="bares.html" class="menu-item">Bares</a></li>
             <li><a href="index.html" class="menu-item">Pontos turísticos</a></li>
-            <li><a href="#" class="menu-item">Home</a></li>
+            <li><a href="passeios.html" class="menu-item">Passeios</a></li>
         </ul>
     </div>
     <br><br>
