--- a/bares.html
+++ b/bares.html
@@ -11,7 +11,7 @@
 <body onresize="mudouTamanho()" >
     
     <div class="menu">
-        <span id="burguer" class="material-icons md-48" onclick="clickMenu()" >menu</span>
+        <span id="burguer" class="material-icons md-48" onclick="clickMenu()" >menu</span> 
         <ul class="menu-lista" id="itens">
             <li><a href="index.html" class="menu-item">Home</a></li>
             <li><a href="hoteis.html" class="menu-item">Hotéis</a></li>
@@ -28,12 +28,12 @@
             <a href="#"><img src="responsa.jpg" class="imagens-card" alt="" width="750px"></a><br>
             <p class="texto-turistico"><span>Endereço:</span> 4, CLS 202 Bloco A, Brasília - DF, 70330-515</p>
             <p class="texto-turistico"><span>Horários:</span> 
-                terça-feira	17:00 – 00:00 <br>
-                quarta-feira	17:00 – 00:00 <br>
-                quinta-feira	17:00 – 00:00 <br>
-                sexta-feira	12:00 – 01:00 <br>
-                sábado	12:00 – 01:00 <br>
-                domingo	12:00 – 23:00 <br>
+                terça-feira	17:00–00:00 <br>
+                quarta-feira	17:00–00:00 <br>
+                quinta-feira	17:00–00:00 <br>
+                sexta-feira	12:00–01:00 <br>
+                sábado	12:00–01:00 <br>
+                domingo	12:00–23:00 <br>
                 segunda-feira	Fechado</p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone" >(61) 99522-4631</span></p>
             <br><br>
@@ -46,13 +46,13 @@
             <a href="#"><img src="mercadito.jpg"  class="imagens-card" alt="" width="750px"></a><br>
             <p class="texto-turistico"><span>Endereço:</span> Asa Sul CLS 201 BL A - Asa Sul, Brasília - DF, 70232-550</p>
             <p class="texto-turistico"><span>Horários:</span> 
-                terça-feira	16:00 – 00:00 <br>
-                quarta-feira	16:00 – 00:00 <br>
-                quinta-feira	16:00 – 00:00 <br>
-                sexta-feira	16:00 – 01:00 <br>
-                sábado	16:00 – 01:00 <br>
-                domingo	16:00 – 00:00 <br>
-                segunda-feira 16:00 – 00:00</p>
+                terça-feira	16:00–00:00 <br>
+                quarta-feira	16:00–00:00 <br>
+                quinta-feira	16:00–00:00 <br>
+                sexta-feira	16:00–01:00 <br>
+                sábado	16:00–01:00 <br>
+                domingo	16:00–00:00 <br>
+                segunda-feira 16:00–00:00</p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone" >(61) 991509430</span></p>
             <br><br>
         </div>
@@ -64,12 +64,12 @@
             <a href="#"><img src="eskina.webp" class="imagens-card" alt="" width="750px"></a><br>
             <p class="texto-turistico"><span>Endereço:</span> Cls 206 Bloco A 02 - Asa Sul, Brasília - DF, 70252-510</p>
             <p class="texto-turistico"><span>Horários:</span> 
-                terça-feira	13:30 – 01:00 <br>
-                quarta-feira	17:30 – 01:00 <br>
-                quinta-feira	17:30 – 01:00 <br>
-                sexta-feira	12:00 – 00:00 <br>
-                sábado	12:00 – 02:00 <br>
-                domingo	12:00 – 23:00 <br>
+                terça-feira	13:30–01:00 <br>
+                quarta-feira	17:30–01:00 <br>
+                quinta-feira	17:30–01:00 <br>
+                sexta-feira	12:00–00:00 <br>
+                sábado	12:00–02:00 <br>
+                domingo	12:00–23:00 <br>
                 segunda-feira Fechado</p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone" >(61) 3543-9961</span></p>
             <br><br>
@@ -83,13 +83,13 @@
             <a href="#"><img src="dudu-bar.jpg"  class="imagens-card" alt="" width="750px"></a><br>
             <p class="texto-turistico"><span>Endereço:</span> Bloco A - SQS 303</p>
             <p class="texto-turistico"><span>Horários:</span> 
-                terça-feira	    12:00 – 15:00, 18:00 – 00:00 <br>
-                quarta-feira	12:00 – 15:00, 18:00 – 00:00 <br>
-                quinta-feira	12:00 – 15:00, 18:00 – 00:00 <br>
-                sexta-feira	    12:00 – 02:00 <br>
-                sábado	        12:00 – 02:00 <br>
-                domingo	        12:00 – 17:00 <br>
-                segunda-feira	12:00 – 15:00, 18:00– 00:00
+                terça-feira	    12:00–15:00, 18:00–00:00 <br>
+                quarta-feira	12:00–15:00, 18:00–00:00 <br>
+                quinta-feira	12:00–15:00, 18:00–00:00 <br>
+                sexta-feira	    12:00–02:00 <br>
+                sábado	        12:00–02:00 <br>
+                domingo	        12:00–17:00 <br>
+                segunda-feira	12:00–15:00, 18:00–00:00
             </p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone" >(61) 99341-0055</span></p>
             <br><br>
@@ -101,13 +101,13 @@
         <div class="cartao-hoteis-itens">
             <a href="#"><img src="abencoado.jpg" class="imagens-card" alt="" width="750px"></a><br>
             <p class="texto-turistico"><span>Endereço:</span> St. Sudoeste SQSW 105 Bloco c Loja 82/86 - Cruzeiro / Sudoeste / Octogonal, Brasília - DF</p>
-            <p class="texto-turistico"><span>Horários:</span> terça-feira	11:00 – 00:00
-                quarta-feira	11:00 – 01:00 <br>
-                quinta-feira	11:00 – 02:00 <br>
-                sexta-feira	11:00 – 02:00 <br>
-                sábado	11:00 – 02:00 <br>
-                domingo	11:00 – 00:00 <br>
-                segunda-feira	11:00 – 00:00
+            <p class="texto-turistico"><span>Horários:</span> terça-feira	11:00–00:00 <br>
+                quarta-feira	11:00–01:00 <br>
+                quinta-feira	11:00–02:00 <br>
+                sexta-feira	11:00–02:00 <br>
+                sábado	11:00–02:00 <br>
+                domingo	11:00–00:00 <br>
+                segunda-feira	11:00–00:00
             </p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone" >(61) 99848-5545</span></p>
             <br><br>
@@ -119,15 +119,104 @@
         <div class="cartao-hoteis-itens">
             <a href="#"><img src="pinella.jpg" class="imagens-card" alt="" width="750px"></a><br>
             <p class="texto-turistico"><span>Endereço:</span> Asa Norte Comércio Local Norte 408 BL B Loja 20 - Asa Norte, Brasília - DF, 70722-000</p>
-            <p class="texto-turistico"><span>Horários:</span> terça-feira	17:00 – 00:00 <br>
-                quarta-feira	17:00 – 00:00 <br>
-                quinta-feira	17:00 – 00:00 <br>
-                sexta-feira	17:00 – 00:00 <br>
-                sábado	17:00– 00:00 <br>
+            <p class="texto-turistico"><span>Horários:</span> terça-feira	17:00–00:00 <br>
+                quarta-feira	17:00–00:00 <br>
+                quinta-feira	17:00–00:00 <br>
+                sexta-feira	17:00–00:00 <br>
+                sábado	17:00–00:00 <br>
                 domingo	Fechado <br>
                 segunda-feira	17:00–00:00
             </p>
             <p class="texto-turistico"><span>Telefone:</span> <span class="telefone" >(61) 3347-8334</span></p>
+            <br><br>
+        </div>
+    </article>
+
+    <h2 class="legenda-hoteis">Primo Pobre Bar</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="primo-pobre.jpg" class="imagens-card" alt="" width="750px"></a><br>
+            <p class="texto-turistico"><span>Endereço:</span> BL D, Comércio Local Norte, 203 - Loja 73 - Asa Norte, Brasília - DF, 70833-540</p>
+            <p class="texto-turistico"><span>Horários:</span> quinta-feira	17:00–01:00 <br>
+                sexta-feira	17:00–01:00 <br>
+                sábado	13:00–01:00 <br> 
+                domingo	15:00–23:00 <br>
+                segunda-feira	Fechado <br>
+                terça-feira	Fechado <br>
+                quarta-feira	17:00–00:00</p>
+            <p class="texto-turistico"><span>Telefone:</span> <span class="telefone" > (61) 9648-6630</span></p>
+            <br><br>
+        </div>
+    </article>
+
+    <h2 class="legenda-hoteis">Versão Brasileira</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="versao-brasileira.jpg" class="imagens-card" alt="" width="750px"></a><br>
+            <p class="texto-turistico"><span>Endereço:</span> Bl. A - SHCS 204, Lj 02 - Asa Sul, Brasília - DF, 70234-510</p>
+            <p class="texto-turistico"><span>Horários:</span>  
+                quinta-feira	16:00–00:00 <br>
+                sexta-feira	12:00–01:00 <br>
+                sábado	12:00–01:00 <br>
+                domingo	12:00–00:00 <br>
+                segunda-feira	Fechado <br>
+                terça-feira	16:00–00:00 <br>
+                quarta-feira	16:00–00:00</p>
+            <p class="texto-turistico"><span>Telefone:</span> <span class="telefone" > (61) 3263-1175</span></p>
+            <br><br>
+        </div>
+    </article>
+
+    <h2 class="legenda-hoteis">Porks Brasília - Asa Sul</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="porks.jpg" class="imagens-card" alt="" width="750px"></a><br>
+            <p class="texto-turistico"><span>Endereço:</span> Asa Sul Comércio Local Sul 103 Bl B Loja 20 e 22 - Asa Sul, Brasília - DF, 70342-520</p>
+            <p class="texto-turistico"><span>Horários:</span>  
+                quinta-feira	17:00–00:00 <br>
+                sexta-feira	17:00–01:00 <br>
+                sábado	16:00–01:00 <br>
+                domingo	17:00–23:00 <br>
+                segunda-feira	Fechado <br>
+                terça-feira	17:00–00:00 <br>
+                quarta-feira	17:00–00:00</p>
+            <p class="texto-turistico"><span>Telefone:</span> <span class="telefone" > (61) 9657-7984</span></p>
+            <br><br>
+        </div>
+    </article>
+
+    <h2 class="legenda-hoteis">Jungle Bar</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="jungle-bar.jpg" class="imagens-card" alt="" width="750px"></a><br>
+            <p class="texto-turistico"><span>Endereço:</span> Asa Sul Comércio Local Sul 103 Bl B Loja 20 e 22 - Asa Sul, Brasília - DF, 70342-520</p>
+            <p class="texto-turistico"><span>Horários:</span>  
+                quinta-feira	17:00–01:00 <br>
+                sexta-feira	17:00–02:00 <br>
+                sábado	17:00–02:00 <br>
+                domingo	Fechado <br>
+                segunda-feira	Fechado <br>
+                terça-feira	17:00–01:00 <br>
+                quarta-feira	17:00–01:00</p>
+            <p class="texto-turistico"><span>Telefone:</span> <span class="telefone" > (61) 99189-6556</span></p>
+            <br><br>
+        </div>
+    </article>
+
+    <h2 class="legenda-hoteis">Deboche! Bar</h2>
+    <article class="cartao-hoteis">
+        <div class="cartao-hoteis-itens">
+            <a href="#"><img src="deboche-bar.jpg" class="imagens-card" alt="" width="750px"></a><br>
+            <p class="texto-turistico"><span>Endereço:</span> Asa Norte CLN 201 BL A Loja 61 - Asa Norte, Brasília - DF, 70832-510</p>
+            <p class="texto-turistico"><span>Horários:</span>  
+                quinta-feira	17:00–01:00 <br>
+                sexta-feira	16:00–01:00 <br>
+                sábado	16:00–01:00 <br>
+                domingo	16:00–00:00 <br>
+                segunda-feira	Fechado <br>
+                terça-feira	17:00–00:00 <br>
+                quarta-feira	17:00–00:00</p>
+            <p class="texto-turistico"><span>Telefone:</span> <span class="telefone" > (61) 98149-6187</span></p>
             <br><br>
         </div>
     </article>
