--- a/bares.html
+++ b/bares.html
@@ -223,10 +223,8 @@
 
     <footer class="footer">
 
-
-
         <div class="texto-footer">
-            <p>Criado por Pedro Renato</p>
+            <p>Desenvolvido por Pedro Renato</p>
             <p>copyright ©️ 2023</p>
         </div>
     </footer>
