ajuste menu mobile

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="passeios.html" class="menu-item">Passeios</a></li>
         </ul>
     </div>
+    <span class="logo">Cerrado Dicas</span>
     <br> <br> <br> <br>
 
 
