--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <li><a href="passeios.html" class="menu-item">Passeios</a></li>
         </ul>
     </div>
-    <span class="logo">Cerrado Dicas</span>
+    <div class="logo-teste">
+        <span class="logo">Cerrado Dicas</span>
+    </div>
+    
     <br> <br> <br> <br>
 
 
