ajuste espaçamento body

--- a/hoteis.html
+++ b/hoteis.html
@@ -19,7 +19,11 @@
             <li><a href="passeios.html" class="menu-item">Passeios</a></li>
         </ul>
     </div>
-    <br><br>
+    </div>
+    <div class="logo-teste">
+        <span class="logo">Cerrado Dicas</span>
+    </div>
+    <br><br><br><br>
     
     <h2 class="legenda-hoteis">Royal Tulip Brasília Alvorada</h2>
     <article class="cartao-hoteis">
