--- a/passeios.html
+++ b/passeios.html
@@ -19,6 +19,9 @@
             <li><a href="passeios.html" class="menu-item">Passeios</a></li>
         </ul>
     </div>
+    <div class="logo-teste">
+        <span class="logo">Cerrado Dicas</span>
+    </div>
     <br><br><br><br>
 
     <h2 class="legenda-hoteis">Parque Nacional de Brasília</h2>
