--- a/bares.html
+++ b/bares.html
@@ -20,6 +20,9 @@
             <li><a href="#" class="menu-item">Home</a></li>
         </ul>
     </div>
+    <div class="logo-teste">
+        <span class="logo">Cerrado Dicas</span>
+    </div>
     <br><br><br><br>
 
     <h2 class="legenda-hoteis">Bar Responsa</h2>
