--- a/passeios.html
+++ b/passeios.html
@@ -18,6 +18,7 @@
         'https://connect.facebook.net/en_US/fbevents.js');
         fbq('init', '1834153097040479');
         fbq('track', 'PageView');
+        fbq('trackCustom', 'lead-passeios');
         </script>
         <noscript><img height="1" width="1" style="display:none"
         src="https://www.facebook.com/tr?id=1834153097040479&ev=PageView&noscript=1"
